--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
                 <img src="image/smch1.jpg" alt="" style="width: 100%;">
                 <h3>SMCH college</h3>
             </div></a>
-        <!--</div>
+        </div>
         <div class="container_of_main_body">-->
           <a href="" class="Subrow_of_mainbody"><div>
               <img src="image/nehu.jfif" alt="" style="width: 100%;">
